--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.22.3",
     "swiper": "^11.0.6",
     "tw-elements-react": "^1.0.0-alpha2"
   },
