--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "aos": "^2.3.4",
     "axios": "^1.6.7",
     "flowbite-react": "^0.7.5",
+    "keep-react": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
-    "swiper": "^11.0.6",
+    "swiper": "^11.1.1",
     "tw-elements-react": "^1.0.0-alpha2"
   },
   "devDependencies": {
